test_programs/compile_failure/noirc_frontend_tests_cannot_assign_to_module/src/main.nr

    mod foo {}

    fn main() {
        foo = 1;
    }
    